@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  16 Jun 2010; Lance Albertson <ramereth@gentoo.org>
+  mcollective-0.4.6.ebuild:
+  Optionally install client binaries but enabled by default
+
 *mcollective-0.4.6 (14 Jun 2010)
 
   14 Jun 2010; Lance Albertson <ramereth@gentoo.org>
